@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.981 2009-02-05 22:40:30 castaglia Exp $
+$Id: NEWS,v 1.982 2009-02-09 23:27:08 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -23,6 +23,7 @@ CVS
   to configure "IdentLookups off".  In addition, the IDENT protocol is not
   secure; it can easily be spoofed using man-in-the-middle attacks.  Sites
   that require IDENT lookups must now explicitly configure "IdentLookups on".
+- Bug 3156 - Allow resumed downloads when HiddenStore is in effect.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
